--- a/university.html
+++ b/university.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SalaOnline - Learning</title>
+    <title>SOL | University</title>
+    <script src="./js/menu.js"></script>
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="icon" href="./assets/img/icon_edu.png" />
   </head>
@@ -12,24 +13,21 @@
     <!-- =====Top_bar===== -->
     <header id="header" class="header">
       <h1>
-        <a href="./index.html">SalaOnline - Learning</a>
+        <a href="../index.html">SalaOnline - Learning</a>
       </h1>
     </header>
-    <!-- =====Ads===== -->
-    <div class="ads__Bx">
-      <a href="404.html"><img src="./assets/img/Ads-1.jpg" /></a>
-    </div>
-    <!-- =====List-name===== -->
+    <!-- =====List===== -->
     <div class="list__main">
       <div class="list__bx">
-        <h3>កម្រិត-ថ្នាក់សិក្សារ</h3>
-        <ul class="ul__bx">
-          <li><a href="#">កម្រិត-អនុវិទ្យាល័យ</a></li>
-          <li><a href="highschool.html">កម្រិត-វិទ្យាល័យ</a></li>
-          <li>
-            <a href="university.html">កម្រិត-សកលវិទ្យាល័យ (ICT)</a>
-          </li>
+        <h3>កម្រិត-សកលវិទ្យាល័យ</h3>
+        <ul>
+          <li><a href="#">Network Engineering</a></li>
+          <li><a href="#">Software Development</a></li>
+          <li><a href="#">Web Design</a></li>
+          <li><a href="#">IT Management</a></li>
+          <li><a href="#">Database Management</a></li>
         </ul>
+        <a class="btn-bth" id="btn-bth" href="./index.html">Back To Home</a>
       </div>
     </div>
     <!-- =====Ads===== -->
@@ -40,7 +38,7 @@
     <footer class="footer">
       <div class="ft__media">
         <img src="./assets/img/icon_edu.png" />
-        <h2>copyright 2022 V3.0| <a href="contect.html">Contect</a></h2>
+        <h2>copyright 2022 | <a href="contect.html">Contect</a></h2>
       </div>
     </footer>
     <!-- script -->
