--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <!-- =====Top_bar===== -->
     <header id="header" class="header">
       <h1>
-        <a href="./index.html">SalaOnline - Learning</a>
+        <a href="/">SalaOnline - Learning</a>
       </h1>
     </header>
     <!-- =====Ads===== -->
     <div class="ads__Bx">
-      <a href="404.html"><img src="./assets/img/Ads-1.jpg" /></a>
+      <a href="404"><img src="./assets/img/Ads-1.jpg" /></a>
     </div>
     <!-- =====List-name===== -->
     <div class="list__main">
@@ -25,22 +25,22 @@
         <h3>កម្រិត-ថ្នាក់សិក្សារ</h3>
         <ul class="ul__bx">
           <li><a href="#">កម្រិត-អនុវិទ្យាល័យ</a></li>
-          <li><a href="highschool.html">កម្រិត-វិទ្យាល័យ</a></li>
+          <li><a href="highschool">កម្រិត-វិទ្យាល័យ</a></li>
           <li>
-            <a href="university.html">កម្រិត-សកលវិទ្យាល័យ (ICT)</a>
+            <a href="university">កម្រិត-សកលវិទ្យាល័យ (ICT)</a>
           </li>
         </ul>
       </div>
     </div>
     <!-- =====Ads===== -->
     <div class="ads__Bx">
-      <a href="404.html"><img src="./assets/img/Ads-1.jpg" /></a>
+      <a href="404"><img src="./assets/img/Ads-1.jpg" /></a>
     </div>
     <!-- =====Media===== -->
     <footer class="footer">
       <div class="ft__media">
         <img src="./assets/img/icon_edu.png" />
-        <h2>copyright 2022 V3.0| <a href="contect.html">Contect</a></h2>
+        <h2>copyright 2022 V3.0| <a href="contect">Contect</a></h2>
       </div>
     </footer>
     <!-- script -->
