--- a/contect.html
+++ b/contect.html
@@ -14,7 +14,7 @@
     <!-- =====Top_bar===== -->
     <header id="header" class="header">
       <h1>
-        <a href="../index.html">SalaOnline - Learning</a>
+        <a href="/">SalaOnline - Learning</a>
       </h1>
     </header>
     <!-- =====>form<===== -->
@@ -63,7 +63,7 @@
     <footer class="footer">
       <div class="ft__media">
         <img src="./assets/img/icon_edu.png" />
-        <h2>copyright 2022 | <a href="index.html">Home</a></h2>
+        <h2>copyright 2022 | <a href="/">Home</a></h2>
       </div>
     </footer>
     <!-- =====scrollBar===== -->
