--- a/university.html
+++ b/university.html
@@ -13,7 +13,7 @@
     <!-- =====Top_bar===== -->
     <header id="header" class="header">
       <h1>
-        <a href="../index.html">SalaOnline - Learning</a>
+        <a href="/">SalaOnline - Learning</a>
       </h1>
     </header>
     <!-- =====List===== -->
@@ -27,7 +27,7 @@
           <li><a href="#">IT Management</a></li>
           <li><a href="#">Database Management</a></li>
         </ul>
-        <a class="btn-bth" id="btn-bth" href="./index.html">Back To Home</a>
+        <a class="btn-bth" id="btn-bth" href="/">Back To Home</a>
       </div>
     </div>
     <!-- =====Ads===== -->
@@ -38,7 +38,7 @@
     <footer class="footer">
       <div class="ft__media">
         <img src="./assets/img/icon_edu.png" />
-        <h2>copyright 2022 | <a href="contect.html">Contect</a></h2>
+        <h2>copyright 2022 | <a href="contect">Contect</a></h2>
       </div>
     </footer>
     <!-- script -->
