--- a/university.html
+++ b/university.html
@@ -16,6 +16,11 @@
         <a href="/">SalaOnline - Learning</a>
       </h1>
     </header>
+    
+    <!-- =====scroll-bar===== -->
+    <div id="progressbar"></div>
+    <div id="scrollPath"></div>
+    
     <!-- =====List===== -->
     <div class="list__main">
       <div class="list__bx">
