--- a/university.html
+++ b/university.html
@@ -13,7 +13,7 @@
     <!-- =====Top_bar===== -->
     <header id="header" class="header">
       <h1>
-        <a href="/">SalaOnline - Learning</a>
+        <a href="/index">SalaOnline - Learning</a>
       </h1>
     </header>
     
